data/derived/comb/progs/unify/prog3596.ml.out
Characters 139-144:
  if List.mem h l then h::seen' 
                          ^^^^^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
